--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
     <meta name="description" content="Join Pickax Social, the free speech social media platform that puts you in control. Discover an X alternative, Twitter alternative that values diverse voices and creator monetization.">
     <meta name="keywords" content="Pickax, Pickax Social, X alternative, Twitter alternative, Truth Social alternative, BlueSky alternative, free speech social media, social platform">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://pickax.site/">
+    <meta property="og:title" content="Pickax Social - Your Voice, Your Platform, Your Way">
+    <meta property="og:description" content="Join Pickax Social, the free speech social media platform that puts you in control. Discover an X alternative that values diverse voices and creator monetization.">
+    <meta property="og:image" content="https://pickax.site/pickax-logo.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:site_name" content="Pickax Social">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://pickax.site/">
+    <meta property="twitter:title" content="Pickax Social - Your Voice, Your Platform, Your Way">
+    <meta property="twitter:description" content="Join Pickax Social, the free speech social media platform that puts you in control. Discover an X alternative that values diverse voices and creator monetization.">
+    <meta property="twitter:image" content="https://pickax.site/pickax-logo.png">
+    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
     <!-- Blue Lightning Bolt Favicon -->
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22 fill=%22%234a90e2%22>⚡</text></svg>">
