--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
     <meta property="twitter:title" content="Pickax Social - Your Voice, Your Platform, Your Way">
     <meta property="twitter:description" content="Join Pickax Social, the free speech social media platform that puts you in control. Discover an X alternative that values diverse voices and creator monetization.">
     <meta property="twitter:image" content="https://pickax.site/pickax-logo.png">
+
+    <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=68aa29db6bd80d4bd2a04a8f&product=sticky-share-buttons' async='async'></script>
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
